Addition of test files.

--- a/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MGEDConsoleLauncher.csproj
+++ b/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MGEDConsoleLauncher.csproj
@@ -104,6 +104,9 @@
     <Content Include="Apps\mged_data_split.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="tres_0062.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
