--- a/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MGEDConsoleLauncher.csproj
+++ b/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MGEDConsoleLauncher.csproj
@@ -96,6 +96,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Apps\DebugRunner.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Apps\mged_data_csv.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
