--- a/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MGEDConsoleLauncher.csproj
+++ b/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MGEDConsoleLauncher.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -106,6 +107,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Apps\mged_data_split.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Apps\PDM2fWin.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Resource Include="tres_0062.txt">
