--- a/Visual Studio/FFTW/FFTWViewer/FFTWViewer.csproj
+++ b/Visual Studio/FFTW/FFTWViewer/FFTWViewer.csproj
@@ -65,6 +65,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DataLoader.cs" />
+    <Compile Include="GraphHandler.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
