--- a/Visual Studio/FFTW/FFTWDotNet/FFTWDotNet.vcxproj
+++ b/Visual Studio/FFTW/FFTWDotNet/FFTWDotNet.vcxproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
